--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="postsDis"><h1>Posts</h1></div>
-    <script>
+    <!-- <script>
       window.fbAsyncInit = function () {
         FB.init({
           appId: '404888344473042',
@@ -23,7 +23,7 @@
       defer
       crossorigin="anonymous"
       src="https://connect.facebook.net/en_US/sdk.js"
-    ></script>
+    ></script> -->
     <!-- <script src="index.js" defer></script> -->
   </body>
 </html>
