--- a/index.html
+++ b/index.html
@@ -1,29 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>InstaCapture</title>
-  </head>
-  <body>
-    <div class="postsDis"><h1>Posts</h1></div>
-    <!-- <script>
-      window.fbAsyncInit = function () {
-        FB.init({
-          appId: '404888344473042',
-          autoLogAppEvents: true,
-          xfbml: true,
-          version: 'v12.0',
-        });
-      };
-    </script>
-    <script
-      async
-      defer
-      crossorigin="anonymous"
-      src="https://connect.facebook.net/en_US/sdk.js"
-    ></script> -->
-    <!-- <script src="index.js" defer></script> -->
-  </body>
+<html>
+    <head>
+        <title>Deployment Example</title>
+    </head>
+    <body>
+        <h1>Deployment example</h1>
+        <p>Simple example of static pages deployment on heroku.</p>
+        <p>change</p>
+        <p>olawqdqwasdfawefwefew</p>
+    </body>
 </html>
