--- a/index.html
+++ b/index.html
@@ -8,22 +8,40 @@
   </head>
   <body>
     <div class="postsDis"><h1>Posts</h1></div>
-    <!-- <script>
+
+    <script>
       window.fbAsyncInit = function () {
         FB.init({
           appId: '404888344473042',
-          autoLogAppEvents: true,
+          cookie: true,
           xfbml: true,
           version: 'v12.0',
         });
+
+        FB.getLoginStatus(function (response) {
+          statusChangeCallback(response);
+        });
       };
+
+      (function (d, s, id) {
+        var js,
+          fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) {
+          return;
+        }
+        js = d.createElement(s);
+        js.id = id;
+        js.src = 'https://connect.facebook.net/en_US/sdk.js';
+        fjs.parentNode.insertBefore(js, fjs);
+      })(document, 'script', 'facebook-jssdk');
+
+      function statusChangeCallback(response) {
+        if (response.status === 'connected') {
+          console.log('Logged in and authenticated');
+        } else {
+          console.log('Not authenticated');
+        }
+      }
     </script>
-    <script
-      async
-      defer
-      crossorigin="anonymous"
-      src="https://connect.facebook.net/en_US/sdk.js"
-    ></script> -->
-    <!-- <script src="index.js" defer></script> -->
   </body>
 </html>
