--- a/index.html
+++ b/index.html
@@ -42,6 +42,15 @@
           console.log('Not authenticated');
         }
       }
+
+      function checkLoginState() {
+        FB.getLoginStatus(function (response) {
+          statusChangeCallback(response);
+        });
+      }
     </script>
+
+    <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+    </fb:login-button>
   </body>
 </html>
