FB login fix attempt 1

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         });
       }
     </script>
-
+    Facebook Login should be here:
     <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
     </fb:login-button>
   </body>
