--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         if (response.status === 'connected') {
           console.log('Logged in and authenticated');
         } else {
-          console.log('Not authenticated');
+          console.log(response);
         }
       }
 
