add user birth scope

--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
       }
     </script>
     Facebook Login should be here:
-    <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+    <fb:login-button
+      scope="public_profile,email,user_birthday"
+      onlogin="checkLoginState();"
+    >
     </fb:login-button>
   </body>
 </html>
