--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </fb:login-button>
 
     <div class="container">
-      <h3 class="heading">Log in to view your profile</h3>
+      <h3 class="profile-heading">Log in to view your profile</h3>
       <div class="profile"></div>
     </div>
 
