--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
       <a class="logout" href="#" onclick="logout()">Logout</a>
       <fb:login-button
         class="fb-btn"
-        scope="public_profile,email,user_birthday"
+        scope="public_profile,email,user_birthday,user_posts"
         onlogin="checkLoginState();"
       >
       </fb:login-button>
     </nav>
 
-    <div class="container">
+    <div class="main-content">
       <h3 class="profile-heading">Log in to view your profile</h3>
       <div class="profile"></div>
+      <div class="posts"></div>
     </div>
 
     <script src="index.js" defer></script>
