--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <a class="logout" href="#" onclick="logout()">Logout</a>
       <fb:login-button
         class="fb-btn"
-        scope="public_profile,email,user_birthday,user_posts"
+        scope="public_profile,email,user_birthday,user_posts,pages_read_user_content"
         onlogin="checkLoginState();"
       >
       </fb:login-button>
