--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             </div>
           </div>
         </div>
+        <h3>User</h3>
         <div class="profile"></div>
         <div class="posts"></div>
       </div>
