--- a/index.html
+++ b/index.html
@@ -57,8 +57,11 @@
             </div>
           </div>
         </div>
-        <h3>User</h3>
-        <div class="profile"></div>
+
+        <div class="profile">
+          <h3>User</h3>
+          <div class="profile-content"></div>
+        </div>
         <div class="posts"></div>
       </div>
       <footer class="footer">
